# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: selftest.yml
page_analyzer/: app.py
page_analyzer/templates/: flash.html  index.html  layout.html  url_id.html  urls.html  urls_table.html
page_analyzer/templates/flashes/: url_added.html  url_exists.html  url_is_required.html  url_wrong.html
